@@ -1,45 +1,0 @@
-
-["?features"]
-	chat_copy = true
-	rare_drop_notification = true
-
-["?mining"]
-	pick_ability_timer_location_x = 5
-	pickaxe_ability_timer_x = 1
-	pick_ability_timer_location_y = 20
-	mining_bits_counter_x = 5
-	pickaxe_ability_timer_y = 34
-	pickobolus_timer = 30
-	mining_bits_counter_y = 15
-	pickaxe_ability_timer = true
-
-["?trackers"]
-	mining_bits_counter = true
-	voidgloom_display_y = 36
-	voidgloom_display_x = 1
-	f6_data_tracker = true
-	voidgloom_display = true
-	mining_bits_counter_x = 1
-	f6_data_tracker_y = 40
-	f6_data_tracker_x = 1
-	mining_bits_counter_y = 30
-
-["?voidglooms"]
-	vcb_display = true
-	vcb_display_y = 44
-	vwarden_display = true
-	vcb_display_x = 1
-	vwarden_display_y = 42
-	vwarden_display_x = 1
-
-["?visual"]
-	remove_0_damage_markers = true
-	fps_counter = true
-	ping_display = true
-	fps_counter_y = 3
-	fps_counter_x = 1
-	format_damage_numbers = true
-	beacon_alert = true
-	ping_display_y = 1
-	ping_display_x = 1
-
